--- a/list/projects.html
+++ b/list/projects.html
@@ -3,8 +3,10 @@ title: Documentation
 narrow: true
 permalink: list/projects.html
 show_profile: true
+show_tags: true
 ---
 
 {% for project in site.projects %}
 - [{{ project.title }}]({{ site.baseurl }}{{ project.url }})
 {% endfor %}
+
