--- a/list/projects.html
+++ b/list/projects.html
@@ -1,9 +1,8 @@
 ---
 title: Documentation
 narrow: true
-permalink: list/projects.html
+permalink: default/projects.html
 show_profile: true
-show_tags: true
 ---
 
 {% for project in site.projects %}
