--- a/list/projects.html
+++ b/list/projects.html
@@ -1,7 +1,7 @@
 ---
 title: Documentation
 narrow: true
-permalink: default/projects.html
+permalink: default/project.html
 show_profile: true
 ---
 
